--- a/FE/ebs/Dockerfile
+++ b/FE/ebs/Dockerfile
@@ -1,6 +1,7 @@
-docker build -t frontimg ./front-end
-docker ps -f name=frontimg -q \
-                                        | xargs --no-run-if-empty docker container stop
-docker container ls -a -f name=frontimg -q \
-                                        | xargs -r docker container rm
-docker run -d --name frontimg -p 3000:3000 frontimg
+FROM node:alpine
+WORKDIR "/usr/src/app"
+COPY package.json ./
+RUN npm install
+COPY ./ ./
+CMD ["npm","start"]
+
