--- a/customer-back/build.gradle
+++ b/customer-back/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2' 
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2' 
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'com.google.api-client:google-api-client:1.30.10'
+
 }
 
 tasks.named('test') {
