Chore: application.yml 수정

--- a/business-be/src/main/resources/application.yml
+++ b/business-be/src/main/resources/application.yml
@@ -1,14 +1,6 @@
-
-# mariaDB
-
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://34.64.235.236:1962/federate_test
-#spring.datasource.username=root
-#spring.datasource.password=root
-
 spring:
   datasource:
-    driverClassName : org.mariadb.jdbc.Driver
-    url : jdbc:mariadb://localhost:1962/federate_test
-    username : test
-    password : 1234
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:1962/federate_test?characterEncoding=UTF-8&serverTimezone=UTC
+    username: test
+    password: 1234
