--- a/business-be/src/main/resources/application.yml
+++ b/business-be/src/main/resources/application.yml
@@ -4,3 +4,14 @@ spring:
     url: jdbc:mariadb://localhost:1962/federate_test?characterEncoding=UTF-8&serverTimezone=UTC
     username: test
     password: 1234
+
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDB103Dialect
+        format_sql: true
