--- a/business-be/src/main/resources/application.yml
+++ b/business-be/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
