--- a/business-be/src/main/resources/application-dev.yml
+++ b/business-be/src/main/resources/application-dev.yml
@@ -1,6 +1,17 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://34.64.235.236:1962/federate_test?characterEncoding=UTF-8&serverTimezone=UTC
-    username: test
-    password: 1234
+    url: jdbc:mariadb://k7d107.p.ssafy.io:3306/ebs_business?characterEncoding=UTF-8&serverTimezone=UTC
+    username: d107
+    password: gumi107
+
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDB103Dialect
+        format_sql: true
