Feat: 점포 등록 및 관리 구현

--- a/business-be/src/main/resources/application-dev.yml
+++ b/business-be/src/main/resources/application-dev.yml
@@ -25,3 +25,6 @@ jwt:
     subject: Ebs RefreshToken
     expiration: '180'
   secret: S0f7AZxciEDA4asdRYUBohQukyrttdGdzv7xcvRneXo
+
+server:
+  port: 80
