--- a/business-be/build.gradle
+++ b/business-be/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.5'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.5'
+	implementation 'org.yaml:snakeyaml:1.33'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
