--- a/business-be/src/main/resources/application-dev.yml
+++ b/business-be/src/main/resources/application-dev.yml
@@ -1,5 +1,3 @@
-home-url:
-  http://localhost
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
@@ -19,7 +17,7 @@ spring:
         format_sql: true
 
   redis:
-    host: localhost
+    host: k7d107.p.ssafy.io
     port: 6379
     mail-expired-time: 300
 
@@ -34,6 +32,7 @@ spring:
           auth: true
           starttls:
             enable: true
+
 #JWT settings
 jwt:
   access:
@@ -46,3 +45,5 @@ jwt:
 
 server:
   port: 80
+home-url:
+  http://localhost
