--- a/customer-front/ebs/package.json
+++ b/customer-front/ebs/package.json
@@ -47,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://k7d107.p.ssafy.io/api"
+  "proxy": "http://k7d107.p.ssafy.io:8080"
 }
