--- a/business-fe/.gitignore
+++ b/business-fe/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Jetbrains
+/.idea
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+/package-lock.json
 
 # testing
 /coverage
