--- a/business-fe/package.json
+++ b/business-fe/package.json
@@ -22,9 +22,10 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.31"
+    "sweetalert2": "^11.4.31",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
