--- a/business-be/src/main/resources/application-dev.yml
+++ b/business-be/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://k7d107.p.ssafy.io:13107/ebs_business?characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mariadb://13.125.49.111:13107/ebs_business?characterEncoding=UTF-8&serverTimezone=UTC
     username: d107_business
     password: business107
 
@@ -17,8 +17,8 @@ spring:
         format_sql: true
 
   redis:
-    host: k7d107.p.ssafy.io
-    port: 6379
+    host: 13.125.49.111
+    port: 17103
     mail-expired-time: 300
 
   mail:
