Feat: 업체 이미지 업로드 기능 구현

--- a/business-be/src/main/resources/application-dev.yml
+++ b/business-be/src/main/resources/application-dev.yml
@@ -45,3 +45,15 @@ jwt:
 
 home-url:
   http://localhost
+
+image-url:
+  designer:
+    http://localhost/photo/designer/
+  hairshop:
+    http://localhost/photo/hairshop/
+
+image-path:
+  designer:
+    C:\Project\designer\
+  hairshop:
+    C:\Project\hairshop\
