--- a/business-be/src/main/resources/application.yml
+++ b/business-be/src/main/resources/application.yml
@@ -45,3 +45,15 @@ jwt:
 
 home-url:
   https://business.ssafy-ebs.com
+
+image-url:
+  designer:
+    https://business.ssafy-ebs.com/photo/designer/
+  hairshop:
+    https://business.ssafy-ebs.com/photo/hairshop/
+
+image-path:
+  designer:
+    /pic/designer/
+  hairshop:
+    /pic/hairshop/
