Fix: Dockerfile 수정

--- a/business-be/Dockerfile
+++ b/business-be/Dockerfile
@@ -1,5 +1,9 @@
 FROM openjdk:8-jdk
 
+RUN mkdir -p /pic
+RUN mkdir -p /pic/hairshop
+RUN mkdir -p /pic/designer
+
 ARG JAR_FILE=build/libs/business-be-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
 
