Feat: 사진 추가 API 구현

--- a/customer-back/src/main/resources/application.yml
+++ b/customer-back/src/main/resources/application.yml
@@ -34,3 +34,9 @@ spring:
         format_sql: true
   jackson:
     time-zone: Asia/Seoul
+
+image-url:
+  https://www.ssafy-ebs.com/photo/
+
+image-path:
+  /pic/
