--- a/customer-back/build.gradle
+++ b/customer-back/build.gradle
@@ -21,26 +21,26 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework:spring-test:5.3.9'
-	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+	implementation 'org.springframework:spring-test:5.3.23'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.5'
+	implementation 'org.slf4j:slf4j-api:2.0.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
 
 	// https://mvnrepository.com/artifact/com.google.guava/guava
 	implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
 
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.2' 
-	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2' 
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-	implementation 'com.google.api-client:google-api-client:1.30.10'
-
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'com.google.api-client:google-api-client:2.0.1'
 }
 
 tasks.named('test') {
