--- a/customer-back/src/main/resources/application.yml
+++ b/customer-back/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
 #    username: ssafy
 #    password: ssafy
 
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+
   jpa:
     hibernate:
       naming:
