--- a/customer-back/build.gradle
+++ b/customer-back/build.gradle
@@ -23,7 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework:spring-test:5.3.23'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.5'
-	implementation 'org.slf4j:slf4j-api:2.0.3'
+	implementation 'org.slf4j:slf4j-api:1.7.36'
+	implementation 'org.yaml:snakeyaml:1.33'
+	implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
