--- a/customer-front/ebs/public/manifest.json
+++ b/customer-front/ebs/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "EBS",
+  "name": "e-Barber Service",
   "icons": [
     {
       "src": "favicon.ico",
