--- a/customer-front/ebs/package.json
+++ b/customer-front/ebs/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-step-progress-bar": "^1.0.3",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.8",
