Fix: Production Build로 변경

--- a/customer-front/ebs/Dockerfile
+++ b/customer-front/ebs/Dockerfile
@@ -2,5 +2,6 @@ FROM node:alpine
 WORKDIR "/usr/src/app"
 COPY package.json ./
 RUN npm install
-COPY ./ ./
-CMD ["npm","start"]
+RUN npm i -S serve
+RUN npm run-script build
+ENTRYPOINT [ "./node_modules/.bin/serve", "-s", "build" ]
