Fix: Dev Build로 변경

--- a/customer-front/ebs/Dockerfile
+++ b/customer-front/ebs/Dockerfile
@@ -2,6 +2,5 @@ FROM node:alpine
 WORKDIR "/usr/src/app"
 COPY package.json ./
 RUN npm install
-RUN npm i -S serve
-RUN npm run-script build
-ENTRYPOINT [ "./node_modules/.bin/serve", "-s", "build" ]
+COPY ./ ./
+CMD ["npm","start"]
