Fix: Production Build로 변경

--- a/customer-front/ebs/Dockerfile
+++ b/customer-front/ebs/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR "/usr/src/app"
 COPY package.json ./
 RUN npm install
 COPY ./ ./
-CMD ["npm","start"]
+RUN npm run build
+CMD ["npx","serve","-s","build"]
